i am more lenz than magnet
i am more ionic than pixels